--- a/techio.yml
+++ b/techio.yml
@@ -1,4 +1,4 @@
-title: Wie man die Programmierfähigkeiten von Entwicklern vor der Einstellung testet
+title: Comment évaluer les compétences techniques des développeurs avant l'embauche ?
 plan:
 - title: Welcome
   statement: markdowns/welcome.md
